--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_riverpod: ^2.6.1
   hooks_riverpod: ^2.6.1
+  google_maps_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
